<resources>
    <string name="app_name">WWW\'s App!</string>
    <string name="app_broadcast_receiver">Meteo.FVG.BootReceiver</string>
    <string name="version">version</string>
    <string name="data_source">Data source: http://www.meteo.fvg.it</string>
    <string name="author">&#169; 2015</string>
    <string name="author_web">http://www.giacomos.it</string>
    <string name="home_title">Home</string>
    <string name="today_title">Today</string>
    <string name="tomorrow_title">Tomorrow</string>
    <string name="two_days_title">Two Days Forecast</string>
    <string name="three_days_title">3 Days Forecast</string>
    <string name="four_days_title">4 Days Forecast</string>
    <string name="radar_title">Radar</string>
    <string name="forecast_title">Previsioni</string>
    <string name="observations_title_daily">Daily Observations</string>
    <string name="observations_title_latest">Latest Observations</string>
    <string name="title_webcam">Webcam</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="reliability">Reliability</string>
    <string name="emission_date">Emission date: </string>
    <string name="hours">ore</string>
    <string name="offline">Offline</string>
    <string name="forecast_map_avail_afternoon">Map available\nin the afternoon</string>
    <string name="forecast_map_error">Data download error</string>
    <string name="downloadingToast">Downloading data&#8230;</string>
    <string name="netUnavailableToast">Network is unavailable.\nData will be updated as\nsoon as network goes up</string>
    <string name="completingDownloadToast">Completing data download&#8230;</string>
    <string name="netErrorToast">There was a download error</string>
    <string name="situation">Situation</string>
    <string name="network_error">Network error</string>
    <string name="dataExpiredToast">data is old&#8230; updating contents</string>
    <string name="radarUpdateToast">updating radar&#8230;</string>
    <string name="radarUpdatedOn">Radar image updated at</string>
    <string name="radarImageOld">Radar image is older than four hours</string>
    <string name="radarImageBlackWhiteHint">(So radar image is black and white)</string>
    <string name="radarDownloadError">Error getting radar image</string>
    <string name="radarAnimDownloadError">Error downloading radar animation data</string>
    <string name="webcam_lists_downloaded">webcam list updated</string>
    <string name="webcam_downloading"> downloading webcam image&#8230;</string>
    <string name="webcam_download_task_canceled">canceling image download</string>
    <string name="webcam_wait_for_image">please wait for image to load</string>
    <string name="server_error">Server error</string>
    <string name="xml_error">XML error</string>
    <string name="lcation_service_error">There was an error obtaining the location service</string>
    <string name="location_not_available">The current location is not available. Enable geolocalization</string>
    <string name="location_disabled">The location service is disabled. Enable it through the system settings.
        The displayed information will not be updated.</string>
    <string name="enable_location_for_full_functionality">Enable location services for full functionality.</string>
    <string name="data_missing">Data missing</string>
    <string name="min_temp">Minimum Temperature</string>
    <string name="max_temp">Maximum Temperature</string>
    <string name="min_temp_abbr">Min.T</string>
    <string name="max_temp_abbr">Max.T</string>
    <string name="wind_lowercase">wind</string>
    <string name="wind_3000">Wind 3000mt</string>
    <string name="wind_2000">Wind 2000mt</string>
    <string name="mets_per_sec">m/s</string>
    <string name="km_per_h">km/h</string>
    <string name="t1000">T.1000m</string>
    <string name="t2000">T.2000m</string>
    <string name="celsius">&#8451;</string>
    <string name="humidity">Humidity</string>
    <string name="mean_wind">Average Wind</string>
    <string name="max_wind">Max Wind</string>
    <string name="temp">Temperature</string>
    <string name="mean_temp">Average Temperature</string>
    <string name="sea">Sea</string>
    <string name="mean_humidity">Average Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="not_available">n.a.</string>
    <string name="select_obs_type_daily">Select Daily Observation Type</string>
    <string name="select_obs_type_latest">Select Latest Observation Type</string>
    <string name="pos_accuracy">accuracy</string>
    <string name="from">from</string>
    <string name="close_button">Close</string>
    <string name="center_map">Center map</string>
    <string name="sat_view">Satellite view</string>
    <string name="terrain_view">Terrain view</string>
    <string name="map_normal_view">Classic view</string>
    <string name="measure_mode">Measure mode</string>
    <string name="radar_help">Radar info</string>
    <string name="radar_animation">Animation</string>
    <string name="info">Information</string>
    <string name="hint_forecast_icons">Touch an icon to read further details, also in today, tomorrow and two days forecast!</string>
    <string name="hint_tap_on_map_markers">Tap over an icon to get further details</string>
    <string name="hint_move_to_measure_on_map">Long click on a marker and move to start measure</string>
    <string name="hint_click_on_map_baloon_webcam_image">Tap on the image to open it on the image viewer</string>
    <string name="hint_zone_longpress">Long press on the map to see the evolution over the day</string>
    <string name="strip_detail_forecast_unavailable">Forecast per area unavailable in this page</string>
    <string-array name="observation_types">
        <item>Minimum Temperature</item>
        <item>Maximum Temperature</item>
        <item>Humidity</item>
        <item>Wind</item>
        <item>Rain</item>
    </string-array>
    <string name="menu_info">Application info</string>
    <string name="menu_refresh">About data update</string>
    <string name="menu_online_guide">Online documentation</string>
    <string name="menu_author_info">Author Info</string>
    <string name="menu_config_info">Technical details</string>
    <string name="menu_settings">Settings&#8230;</string>
    <string name="locality_unavailable">Locality unavailable</string>
    <string name="ok_button">@android:string/ok</string>
    <string name="cancel_button">@android:string/cancel</string>
    <string name="popup_position_title">About your position</string>
    <string name="popup_info_title">App info and copyright</string>
    <string name="popup_data_update_title">Data automatic refresh</string>
    <string name="error_message">Error message</string>
    <string-array name="drawer_text_items">
        <item>Forecast</item>
        <item>Radar</item>
        <item>Daily observations</item>
        <item>Latest observations</item>
        <item>Webcam</item>
        <item>Reports</item>
        <item>Suggest Meteo.FVG</item>
        <item>Meteo.FVG web</item>
    </string-array>
    <string name="reportUpdate">Refresh</string>
    <string name="reportHelp">Reports tutorial</string>
    <string name="buy_pro_title">Buy Meteo.FVG!</string>
    <string name="button_text_buy_now">Buy now!</string>
    <string name="bt_no_buy_now">Not now, thanks!</string>
    <string name="buy_now_promotional_text">Buy Meteo.FVG now at the special price of 1,50 euros, 
        enjoy its fantastic features and support its future development!</string>
    <string name="whats_new">What\'s new?</string>
    <string name="purchase_whats_new_txt">"This is a completely renewed application and is 
the result of two years of work. It features:\n
- faster download of data;\n
- google maps code rewritten with new API v2;\n
- radar animation;\n
- meteorological conditions reports: you can be a meteo reporter;\n
- user interface completely rewritten for Android 4.</string>
    <string name="authorized_to_get_promo">I\'ve been previously authorized by the author to get this version for free&#42;</string>
    <string name="request_authorization_for_free">Request activation now!</string>
    <string name="contributed_to_devel">"I contributed to the development of 
the app through the Android.Meteo.FVG Google+ community&#42;&#42; "</string>
    <string name="previously_authorized_footnote">* You must have been previously authorized by the author. This request is not aimed at requesting authorization. Unauthorized requests will be ignored and blacklisted.</string>
    <string name="contributed_to_devel_footnote">** Please indicate your name and the date of your comment on G+ in the precompiled email message.</string>
    <string name="note_prova_users">NOTE: Meteo.FVG PROva users may have their trial period shorter or even expired</string>
    <string name="pref_enable_notification_service">Enable notification service</string>
    <string name="pref_enab_notif_service_summary">Globally enables the notification service</string>
    <string name="pref_service_sleep_interval">Interval between notification checks (minutes)</string>
    <string name="pref_service_sleep_interval_summary">The service wakes up every time this interval elapses</string>
    <string name="pref_service_enabled_on">The service is enabled and will run when network is available</string>
    <string name="pref_service_enabled_off">The service is disabled</string>
    <string name="pref_sleep_interval_dialog">Notifications check interval</string>
    <string name="pref_sleep_interval_message">Set the number of minutes between one notification check and the next</string>
    <string name="pref_rain_alert_enable">Rain alerts are enabled</string>
    <string name="pref_rain_alert_off">Rain alerts are disabled</string>
    <string name="pref_rain_notification_enable">Notify when it\'s possible that it\'s going to rain</string>
    <string name="pref_rain_notification_enable_summary">If enabled, you will be notified if rain is close to your position within a radius</string>
    <string name="pref_rain_notif_interval">Minutes between rain alerts</string>
    <string name="pref_rain_notif_interval_summary">Two different rain alerts will not be shown unless 
	    this interval has elab</string>
    <string name="pref_rain_notif_interval_dialog_message">Select the minimum interval, in minutes, 
	    that must elapse between two subsequent rain alert notifications. The number must be between 1 and 180</string>
    <string name="pref_rain_notif_interval_dialog_title">Minutes between rain alert notifications</string>
    <string name="notifications">Notifications</string>
    <string name="pref_internal_rain_calc_checkbox">The phone calculates probability for rain alerts. This choice is faster, calculations are performed as soon as a new radar image is available. Recommended</string>
    <string name="pref_internal_rain_calc_checkbox_off">The rain possibility is calculated by the remote Meteo.FVG server. Notifications may arrive late, depending on the time interval set for the service. For slow devices.</string>
    <string name="pref_use_internal_rain_detection">Use the device to calculate the rain probability. Note: this service is implemented
	    by the application author. Data is not taken from Osmer/Meteo.FVG</string>
    <string name="pref_use_internal_rain_detection_summary">It is recommended that the rain possibility detection is calculated by the device. This guarantees the most fast and up to date notifications</string>
    <string name="personal_message_title">Title</string>
    <string name="personal_message_date">Date</string>
</resources>