<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:it.giacomos.android.wwwsapp="http://schemas.android.com/apk/res-auto"
    >
    
    <!-- 
   <item android:id="@+id/icon_refresh"
       android:showAsAction="always"
       android:title=""
       android:actionLayout="@layout/animated_image_view"
       />
    -->
   <!--  NOTE: actionbar compat requires  
   it.giacomos.android.wwwsapp:showAsAction
   it.giacomos.android.wwwsapp:actionLayout,
   android:showAsAction not valid
   -->
   
  
      <item android:id="@+id/actionbarmenu"
       it.giacomos.android.wwwsapp:showAsAction="ifRoom"
       android:title=""
       it.giacomos.android.wwwsapp:actionLayout="@layout/actionmenu"
       />
        
        <!--  when not using AppCompat -->
    <!-- 
      <item android:id="@+id/actionbarmenu"
       android:showAsAction="ifRoom"
       android:title=""
       android:actionLayout="@layout/actionmenu"
       />  
    -->    
               
    <item android:id="@+id/menu_data_update_info"
          android:icon="@drawable/refresh"
          android:title="@string/menu_refresh" />
   
     <item android:id="@+id/menu_online_guide"
          android:icon="@drawable/online_guide"
          android:title="@string/menu_online_guide" />

       
     <item android:id="@+id/menu_author_info"
          android:icon="@drawable/author_info"
          android:title="@string/menu_author_info" />
       
    <item android:id="@+id/menu_config_info"
          android:icon="@drawable/config_info"
          android:title="@string/menu_config_info" />
     
     
    <item android:id="@+id/menu_info"
          android:icon="@drawable/info"
          android:title="@string/menu_info" />
    
         
    <item android:id="@+id/menu_settings"
          android:title="@string/menu_settings" />
    
</menu>