<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/buyProActivityScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical" >

<LinearLayout
    android:id="@+id/layoutReportConditions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tvBuyPro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/buy_pro_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btBuyNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text_buy_now" />

    <TextView
        android:id="@+id/tvBuyProPromotionalMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/tutorial_textview_background_green_border"
        android:scrollbars="vertical"
        android:text="@string/buy_now_promotional_text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btNoBuyThanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_no_buy_now" />

    <TextView
        android:id="@+id/tvBuyDaysLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/tutorial_textview_background_red_border"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/whats_new"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/tutorial_textview_background_green_border"
        android:scrollbars="vertical"
        android:text="@string/purchase_whats_new_txt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/tutorial_textview_background_red_border"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/cbAuthorized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorized_to_get_promo"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbContributedToDevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contributed_to_devel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btRequestAuth"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_login"
            android:text="@string/request_authorization_for_free" />

        <TextView
            android:id="@+id/tvAuthorizedToGetPromo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAuthorizedFootnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previously_authorized_footnote"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvPersonalMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contributed_to_devel_footnote"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvNotePROvaUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/note_prova_users"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

</ScrollView>

